[package]
name = "confert"
version = "1.0.1"
edition = "2024"

[dependencies]
regex = "1.12.2"
comrak = "0.48.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
rpath = false
incremental = false

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
incremental = true
codegen-units = 32
lto = false
